--- a/package.json
+++ b/package.json
@@ -4,11 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint --ignore-path .eslintignore --fix .",
+    "lint:check": "eslint --ignore-path .eslintignore .",
+    "prepare": "husky install"
   },
   "author": "Safwan Parkar",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "husky": "^8.0.3"
+  },
+  "dependencies": {
+    "eslint": "^8.55.0",
+    "prettier": "^3.1.0"
   }
 }
