--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "rewards",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "eslint --ignore-path .eslintignore --fix .",
-    "lint:check": "eslint --ignore-path .eslintignore .",
-    "prepare": "husky install"
-  },
-  "author": "Safwan Parkar",
-  "license": "ISC",
-  "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "husky": "^8.0.3"
-  },
-  "dependencies": {
-    "eslint": "^8.55.0",
-    "prettier": "^3.1.0"
-  }
+    "name": "rewards",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "lint": "eslint --ignore-path .eslintignore --fix .",
+        "lint:check": "eslint --ignore-path .eslintignore .",
+        "prepare": "husky install",
+        "dev": "nodemon src/index.js"
+    },
+    "author": "Safwan Parkar",
+    "license": "ISC",
+    "devDependencies": {
+        "@commitlint/cli": "^18.4.3",
+        "@commitlint/config-conventional": "^18.4.3",
+        "eslint-plugin-prettier": "^5.0.1",
+        "husky": "^8.0.3",
+        "nodemon": "^3.0.2",
+        "prettier": "^3.1.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "eslint": "^8.55.0",
+        "express": "^4.18.2"
+    }
 }
