--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "dotenv": "^16.3.1",
         "eslint": "^8.55.0",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "pg": "^8.11.3"
     }
 }
